@@ -23,7 +23,7 @@ my %subgraphs = (
   'Producers'        => [qw| FFFFCC producers producers_rev producers_relations |],
   'Releases'         => [qw| C8FFC8 releases releases_rev releases_media releases_platforms releases_producers releases_lang releases_vn |],
   'Visual Novels'    => [qw| FFE6BE vn vn_rev vn_relations vn_anime vn_screenshots |],
-  'Users'            => [qw| CCFFFF users votes rlists wlists sessions |],
+  'Users'            => [qw| CCFFFF users votes rlists wlists sessions notifications |],
   'Discussion board' => [qw| FFDCDC threads threads_boards threads_posts |],
   'Tags'             => [qw| FFC8C8 tags tags_aliases tags_parents tags_vn |],
   'Misc'             => [qw| F5F5F5 changes anime screenshots stats_cache quotes relgraphs |],
